# LoRa

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  main.cpp  structs.h
main/Controller/: Controller.cpp  Controller.h  LoRa_Task.cpp  LoRa_Task.h
main/LoRa_module/: LoRaE5.cpp  LoRaE5.h
main/Sensor_Task/: Sensor_Task.cpp  Sensor_Task.h
